--- a/release-notes.html
+++ b/release-notes.html
@@ -557,7 +557,7 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>org.apache.commons:commons-csv</code> to version <code>1.12.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3014">3014</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.groovy:groovy-bom</code> to version <code>4.0.23</code> (<a href="https://github.com/apache/logging-log4j2/pull/3000">3000</a>)</p>
+<p>Update <code>org.apache.groovy:groovy-bom</code> to version <code>4.0.24</code> (<a href="https://github.com/apache/logging-log4j2/pull/3191">3191</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.kafka:kafka-clients</code> to version <code>3.9.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3184">3184</a>)</p>
@@ -581,10 +581,13 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>org.hsqldb:hsqldb</code> to version <code>2.7.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/3163">3163</a>)</p>
 </li>
 <li>
+<p>Update <code>org.jmdns:jmdns</code> to version <code>3.6.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3189">3189</a>)</p>
+</li>
+<li>
 <p>Update <code>org.junit:junit-bom</code> to version <code>5.11.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3111">3111</a>)</p>
 </li>
 <li>
-<p>Update <code>org.mongodb:bson</code> to version <code>5.2.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3181">3181</a>)</p>
+<p>Update <code>org.mongodb:bson</code> to version <code>4.11.5</code> (<a href="https://github.com/apache/logging-log4j2/pull/3187">3187</a>)</p>
 </li>
 <li>
 <p>Update <code>org.openrewrite.maven:rewrite-maven-plugin</code> to version <code>5.15.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2983">2983</a>)</p>
